--- a/index.html
+++ b/index.html
@@ -402,6 +402,141 @@
             </div>
         </section>
 
+
+        <!-- bonus section butget section  -->
+        <section class="relative px-2 lg:px-0 bg-gray-300 lg:bg-none mb-10">
+            <div class="lg:absolute z-30 lg:top-20 lg:left-20 lg:right-20 overflow-hidden">
+                <div class="space-y-9">
+                    <h1 class="bg-green-50 bg-opacity-20  rounded-xl lg:bg-none text-3xl lg:text-5xl lg:text-white font-extrabold lg:w-[70%] w-[90%] text-center mx-auto lg:opacity-70 ">Our interior design services are tailored to your
+                        
+                        space, style, and budget.</h1>
+
+
+                    <div class="flex gap-1 justify-between font-extrabold">
+                        <div class="card bg-green-50 bg-opacity-50  lg:w-96 shadow-xl relative overflow-hidden">
+
+                            <div class="absolute -top-10  -left-10">
+                                <div class="relative ">
+                                    <i class="fa-solid fa-circle  text-8xl lg:text-9xl"></i>
+
+
+                                    <p class="absolute top-11 left-11 text-lg lg:text-3xl font-bold text-white">50% off</p>
+                                </div>
+                            </div>
+                            <figure class=" flex flex-col">
+
+
+                                <div class="card-body items-center px-2 lg:text-center space-y-1 lg:space-y-6 text-justify">
+                                    <h2 class="card-title font-black uppercase mt-12 lg:mt-0">Design Online
+                                    </h2>
+                                    <p class="text-sm lg:text-lg">Your designer will work with you 1:1 to bring your vision to life, complete with
+                                        a 3D
+                                        rendering of your actual space.
+                                    </p>
+
+                                    <div>
+                                        <p class="text-xl font-bold">Starting at
+                                        </p>
+                                        <p class="text-5xl">
+                                            $99.50
+                                        </p>
+                                    </div>
+                                    <div class="card-actions">
+                                        <a
+                                            class="btn bg-btn-color-primary   text-sm lg:text-xl font-bold rounded-3xl">Get
+                                            Started
+                                            online<i
+                                                class="fa-solid fa-circle-arrow-right  text-2xl lg:text-3xl -rotate-45"></i></a>
+                                    </div>
+                                </div>
+                            </figure>
+
+                        </div>
+
+                        <div class="card bg-green-50 bg-opacity-50  lg:w-96 shadow-xl relative overflow-hidden">
+
+                            <div class="absolute -top-10  -left-10">
+                                <div class="relative ">
+                                    <i class="fa-solid fa-circle  text-8xl lg:text-9xl "></i>
+
+
+                                    <p class="absolute top-11 left-11 text-lg lg:text-3xl font-bold text-white">50% off</p>
+                                </div>
+                            </div>
+                            <figure class=" flex flex-col">
+
+
+                                <div class="card-body items-center lg:text-center space-y-1 lg:space-y-6 px-2 text-justify">
+                                    <h2 class="card-title font-black uppercase mt-12 lg:mt-0">Design in Person
+                                    </h2>
+                                    <p class="text-sm lg:text-lg">Your designer will work with you 1:1 to bring your vision to life, complete with
+                                        a 3D
+                                        rendering of your actual space.
+                                    </p>
+
+                                    <div>
+                                        <p class="text-xl font-bold">First room at
+                                        </p>
+                                        <p class="text-5xl">
+                                            $199.50
+                                        </p>
+                                    </div>
+                                    <div class="card-actions">
+                                        <a
+                                            class="btn bg-btn-color-primary  text-sm lg:text-xl font-bold rounded-3xl ">Get
+                                            Started
+                                            in Person<i
+                                                class="fa-solid fa-circle-arrow-right  text-2xl lg:text-3xl  -rotate-45"></i></a>
+                                    </div>
+                                </div>
+                            </figure>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="carousel w-full">
+
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./assets/room-1.jpg" class="w-full " />
+
+
+
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide4" class="btn btn-circle">❮</a>
+                        <a href="#slide2" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- slide 2  -->
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./assets/room3 .jpg" class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-circle">❮</a>
+                        <a href="#slide3" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+                <!-- slide 3  -->
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./assets/room2.jpg" class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-circle">❮</a>
+                        <a href="#slide4" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+
+                <!-- slide4  -->
+                <div id="slide4" class="carousel-item relative w-full">
+                    <img src="./assets/room4.jpg" class="w-full" />
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-circle">❮</a>
+                        <a href="#slide1" class="btn btn-circle">❯</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
         <!-- next project section  -->
         <section class="container mx-auto bg-[url('./assets/bg.jpg')] bg-no-repeat bg-cover py-5 lg:py-24">
             <!-- section header content  -->
@@ -423,18 +558,22 @@
             <div class="w-[90%] lg:w-[80%] mx-auto">
                 <form action="" class=" grid grid-cols-1 lg:grid-cols-2 gap-x-8 gap-y-4">
 
-                    <input type="text" class="border rounded-full  px-10 py-3 text-xl lg:text-lg" placeholder="First name*">
-                    <input type="text" class="border rounded-full  px-10 py-3 text-xl lg:text-lg" placeholder="Last Name*">
-                    <input type="number" class="border rounded-full  px-10 py-3 text-xl lg:text-lg" placeholder="Phone Number*">
-                    <input type="email" class="border rounded-full  px-10 py-3 text-xl lg:text-lg" placeholder="Email address*">
+                    <input type="text" class="border rounded-full  px-10 py-3 text-xl lg:text-lg"
+                        placeholder="First name*">
+                    <input type="text" class="border rounded-full  px-10 py-3 text-xl lg:text-lg"
+                        placeholder="Last Name*">
+                    <input type="number" class="border rounded-full  px-10 py-3 text-xl lg:text-lg"
+                        placeholder="Phone Number*">
+                    <input type="email" class="border rounded-full  px-10 py-3 text-xl lg:text-lg"
+                        placeholder="Email address*">
                     <textarea name="" id="" cols="" rows=""
                         class="text-xl lg:text-2xl border rounded-3xl lg:col-span-2 h-44 lg:h-52 px-4 lg:px-10 py-4 lg:py-10"
                         placeholder="Write your message here"></textarea>
 
 
                     <div class=" h-16 col-span-1 lg:col-span-2 rounded-3xl"><a
-                        class="btn bg-btn-color-primary  lg:flex text-xl font-bold rounded-full w-full h-full lg:h-auto ">Send
-                        Mail <i class="fa-solid fa-circle-arrow-right  text-3xl  -rotate-45"></i></a></div>
+                            class="btn bg-btn-color-primary  lg:flex text-xl font-bold rounded-full w-full h-full lg:h-auto ">Send
+                            Mail <i class="fa-solid fa-circle-arrow-right  text-3xl  -rotate-45"></i></a></div>
 
 
 
@@ -449,7 +588,7 @@
 
     </main>
 
-    
+
     <footer class="bg-[#212121] py-20">
 
         <!-- copy from this websites nav bar  -->
@@ -478,8 +617,8 @@
 
             <div class="flex items-center gap-6 w-full lg:w-fit px-5 lg:mx-auto h-16">
 
-                <a class="btn bg-btn-color-primary  w-full h-full lg:h-auto lg:flex text-xl font-bold rounded-full">Book Consult <i
-                        class="fa-solid fa-circle-arrow-right  text-3xl  -rotate-45"></i></a>
+                <a class="btn bg-btn-color-primary  w-full h-full lg:h-auto lg:flex text-xl font-bold rounded-full">Book
+                    Consult <i class="fa-solid fa-circle-arrow-right  text-3xl  -rotate-45"></i></a>
             </div>
         </div>
 
