website has been cheched and final push

--- a/index.html
+++ b/index.html
@@ -321,9 +321,7 @@
 
                     <h2 class="text-3xl lg:text-4xl font-black text-[#212121] lg:w-[90%] flex justify-center">Our Latest
                         Portfolio</h2>
-                    <p class="space-y-6 flex flex-col items-center text-center lg:w-1/2">The barn house captivates with
-                        its
-                        blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.
+                    <p class="space-y-6 flex flex-col items-center text-center lg:w-1/2">If you’re not happy, we’re not happy. We know designing your home can be an intimidating experience, if you’re not happy with your design for whatever reason, let us know, and we’ll make it right.
                     </p>
                 </div>
                 <!-- section image container  -->
@@ -591,6 +589,8 @@
 
     <footer class="bg-[#212121] py-20">
 
+        <!-- website checked  -->
+
         <!-- copy from this websites nav bar  -->
         <div class="w-[97%] lg:w-[90%] mx-auto mb-6 lg:mb-12 flex flex-col items-center text-center text-white gap-5">
             <div class="flex gap-3 ">
@@ -620,7 +620,9 @@
                 <a class="btn bg-btn-color-primary  w-full h-full lg:h-auto lg:flex text-xl font-bold rounded-full">Book
                     Consult <i class="fa-solid fa-circle-arrow-right  text-3xl  -rotate-45"></i></a>
             </div>
+           
         </div>
+        <p class="text-sm text-gray-700 flex justify-center mx-auto">Find us in the App Store | Privacy Policy | Terms of Service | ADA Accessibility | Do Not Sell My Personal Information | </p>
 
     </footer>
 
